use TableRecord